# dissect.cstruct

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  COPYRIGHT  LICENSE  README.md  addrin.py  pyproject.toml  setup.cfg  setup.py  structs.h  tox.ini
.github/workflows/: dissect-ci.yml
dissect/cstruct/: __init__.py  bitbuffer.py  compiler.py  cstruct.py  declarative.py  dump.py  exception.py  exceptions.py  expression.py  lexer.py  parser.py  util.py  utils.py
dissect/cstruct/tools/: stubgen.py  stubify.py
dissect/cstruct/types/: __init__.py  base.py  bytesinteger.py  char.py  chartype.py  enum.py  flag.py  instance.py  int.py  leb128.py  packed.py  packedtype.py  pointer.py  structure.py  void.py  voidtype.py  wchar.py  wchartype.py
examples/: disk.py  mirai.py  mirai_json.py  pe.py  protobuf.py  secdesc.py
tests/: conftest.py  test_align.py  test_annotations.py  test_basic.py  test_benchmark.py  test_bitbuffer.py  test_bitfield.py  test_bytesinteger.py  test_compiler.py  test_ctypes.py  test_ctypes_type.py  test_declarative.py  test_dump.py  test_enum.py  test_expression.py  test_flag.py  test_lexer.py  test_optional_dynamic_char.py  test_packedtype.py  test_parser.py  test_pointer.py  test_struct.py  test_stub.py  test_stubify_functions.py  test_tools_stubgen.py  test_types_base.py  test_types_char.py  test_types_custom.py  test_types_enum.py  test_types_flag.py  test_types_int.py  test_types_leb128.py  test_types_packed.py  test_types_pointer.py  test_types_structure.py  test_types_union.py  test_types_void.py  test_types_wchar.py  test_union.py  test_util.py  (+2 more)
tests/_data/: testdef.txt
tests/_docs/: conf.py
tests/data/: stub_file.py  stub_file.pyi
