[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.cstruct"
description = "A Dissect module implementing a parser for C-like structures: structure parsing in Python made easy"
readme = "README.md"
requires-python = "~=3.9"
license.text = "Apache License 2.0"
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.cstruct"
repository = "https://github.com/fox-it/dissect.cstruct"

[project.optional-dependencies]
dev = [
  "typing_extensions"
]

[project.scripts]
cstruct-stubgen = "dissect.cstruct.tools.stubgen:main"

[tool.ruff]
line-length = 120
required-version = ">=0.9.0"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "ANN",
  "B",
  "C4",
  "DTZ",
  "T10",
  "FA",
  "ISC",
  "G",
  "INP",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "PTH",
  "PLC",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "RUF",
]
ignore = ["E203", "B904", "UP024", "ANN002", "ANN003", "ANN204", "ANN401", "SIM105", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/docs/**" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["dissect.cstruct"]
known-third-party = ["dissect"]

[tool.setuptools]
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
