[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.cstruct
license = Apache License 2.0
description = A Dissect module implementing a parser for C-like structures: structure parsing in Python made easy
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3

[options]
python_requires = ~=3.9
